# MiniCPM-Desk-Pet-V2

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HACKATHON.md  NOTICE.md  README.md  go.sh  logs.md
.github/workflows/: build-installer.yml  build-sidecar.yml  release.yml
adapters/: README.md
adapters/lora_nekoqa_adapter_20260515_0738/: README.md  REPORT_4WAY.md  USAGE.md  adapter_config.json  adapter_model.f16.gguf  capability_loss.jsonl  persona_4way.txt  train_meta.json
clawd-on-desk/: .env.apple-notarize.local.example  .gitignore  AGENTS.md  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  README.zh-TW.md  package-lock.json  package.json
clawd-on-desk/agents/: codex-log-monitor.js
clawd-on-desk/assets/: icon.icns
clawd-on-desk/hooks/: attention-signal.js  auto-start.js  clawd-hook.js  codewhale-hook.js  codex-hook.js  cursor-hook.js  kilocode-focus-adapter.js  kimi-install.js  opencode-focus-adapter.js  server-config.js
clawd-on-desk/pwa/: app.js  index.html  manifest.json  sw.js
clawd-on-desk/scripts/: build-dmg-notarize.sh  monitor-clawd-power.ps1  monitor-clawd-resources.sh  notarize.js  remote-deploy.sh  validate-theme.js
clawd-on-desk/src/: agent-reach-client.js  attention-browser-scan.js  attention-decision.js  attention-event-bus.js  attention-features.js  attention-insights.js  attention-policy.js  (+116 more)
docs/: development.md  llama-cpp-migration.md
minicpm-pet-bridge/: DEPRECATED.md  README.md  chat.py  clawd_state.py  requirements.txt  server.py  smoke_test.py  start.sh
minicpm-pet-bridge-uv/: DEPRECATED.md  README.md  pyproject.toml  run.sh  server.py  updater.py
minicpm-pet-bridge-uv/static/: index.html
minicpm-sidecar/: .gitignore  README.md  pyproject.toml
minicpm-sidecar/gateway/: __init__.py  __main__.py  clawd_state.py  lifecycle.py  llama_client.py  log_setup.py  server.py  think_filter.py  updater.py
minicpm-sidecar/scripts/: build-all.sh  build-gateway.ps1  build-gateway.sh  build-llama.ps1  build-llama.sh  clone-llama.sh  fetch-llama-release.ps1  run-dev.sh
minicpm-sidecar/tests/: test_adapter_endpoints.py  test_discover_adapters.py  test_discover_models.py  test_lifecycle.py  test_llama_client_payload.py  test_lora_injection.py  test_think_filter.py
(+116 files in other folders)
