[project]
name = "minicpm-pet-bridge"
version = "0.2.0"
description = "Local MiniCPM5 inference + HTTP bridge for the desktop pet (uv-managed)."
requires-python = ">=3.10,<3.13"
readme = "README.md"

# Pin only what the platform really needs; let uv pick compatible patch
# versions inside this range. Mirrors the original requirements.txt with
# upper bounds so the lockfile stays reproducible across friend machines.
dependencies = [
  "torch>=2.4.0,<2.7",
  "transformers>=4.46.0,<4.55",
  "accelerate>=0.34.0",
  "peft>=0.13.0",
  "sentencepiece>=0.2.0",
  "protobuf>=4.25.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "huggingface_hub>=0.25.0",
]

[tool.uv]
# Don't auto-install pre-release torch nightlies; users want stable.
prerelease = "disallow"
# Force a flat `.venv/` next to the project so the launcher can find it.
managed = true

[tool.uv.sources]
# Apple Silicon: torch on PyPI ships universal2 wheels with MPS support
# out of the box, so no special index needed. Linux/CUDA users would set
# UV_INDEX_URL or override here.
