[project]
name = "minicpm-sidecar-gateway"
version = "0.1.0"
description = "Thin FastAPI gateway in front of llama.cpp's llama-server for the MiniCPM desk pet."
requires-python = ">=3.10,<3.13"
readme = "README.md"

# Intentionally NO torch / transformers / peft — the gateway is a pure
# stdlib + HTTP shim. All ML happens inside the bundled llama-server
# (C++ binary). End users get a few-MB Python runtime + native server.
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "huggingface_hub>=0.25.0",
]

[project.optional-dependencies]
# Build-only: PyInstaller is invoked from scripts/build-gateway.sh.
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
minicpm-sidecar = "gateway.__main__:main"

[tool.uv]
prerelease = "disallow"
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gateway"]
